; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/compress/extr_gzip.c_do_compress.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/compress/extr_gzip.c_do_compress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@deflate = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i64, i32, i32**, i64*)* @do_compress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_compress(i32* %0, i32* %1, i64 %2, i32 %3, i32** %4, i64* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32**, align 8
  %12 = alloca i64*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i64 %2, i64* %9, align 8
  store i32 %3, i32* %10, align 4
  store i32** %4, i32*** %11, align 8
  store i64* %5, i64** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i32, i32* %10, align 4
  %17 = load i32**, i32*** %11, align 8
  %18 = load i64*, i64** %12, align 8
  %19 = load i64, i64* @deflate, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @do_process(i32* %13, i32* %14, i64 %15, i32 %16, i32** %17, i64* %18, i32 %20)
  ret i32 %21
}

declare dso_local i32 @do_process(i32*, i32*, i64, i32, i32**, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
